@@ -1263,6 +1263,9 @@ run_interpreter(NumExprObject *self, intp len, char *output, char **inputs,
     params.memsteps = self->memsteps;
     params.memsizes = self->memsizes;
     params.r_end = PyString_Size(self->fullsig);
+
+    /* From now on, we can release the GIL */
+    Py_BEGIN_ALLOW_THREADS;
     blen1 = len - len % BLOCK_SIZE1;
     r = vm_engine_block(0, blen1, BLOCK_SIZE1, params, pc_error);
     if (r < 0) return r;
@@ -1276,6 +1279,8 @@ run_interpreter(NumExprObject *self, intp len, char *output, char **inputs,
             if (r < 0) return r;
         }
     }
+    Py_END_ALLOW_THREADS;
+
     return 0;
 }
 
